# Generated by Django 5.2.10 on 2026-01-18 06:03
"""Initial schema for courses and enrollments."""

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):
    """Create initial course-related tables."""

    initial = True

    dependencies = [
        ("accounts", "0001_initial"),
    ]

    operations = [
        migrations.CreateModel(
            name="Course",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("name", models.CharField(max_length=255)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                (
                    "teacher_profile",
                    models.ForeignKey(
                        db_column="teacher_profile_id",
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="courses",
                        to="accounts.teacherprofile",
                    ),
                ),
            ],
            options={
                "db_table": "courses",
            },
        ),
        migrations.CreateModel(
            name="Enrollment",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("enrolled_at", models.DateTimeField(auto_now_add=True)),
                (
                    "status",
                    models.CharField(
                        choices=[("ACTIVE", "Active"), ("DROPPED", "Dropped")], max_length=32
                    ),
                ),
                (
                    "course",
                    models.ForeignKey(
                        db_column="course_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="enrollments",
                        to="courses.course",
                    ),
                ),
                (
                    "student_profile",
                    models.ForeignKey(
                        db_column="student_profile_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="enrollments",
                        to="accounts.studentprofile",
                    ),
                ),
            ],
            options={
                "db_table": "enrollments",
            },
        ),
        migrations.AddIndex(
            model_name="course",
            index=models.Index(fields=["name"], name="idx_course_name"),
        ),
        migrations.AddIndex(
            model_name="course",
            index=models.Index(fields=["teacher_profile"], name="idx_course_teacher"),
        ),
        migrations.AddIndex(
            model_name="enrollment",
            index=models.Index(fields=["course"], name="idx_enroll_course"),
        ),
        migrations.AddIndex(
            model_name="enrollment",
            index=models.Index(fields=["student_profile"], name="idx_enroll_student"),
        ),
        migrations.AddConstraint(
            model_name="enrollment",
            constraint=models.UniqueConstraint(
                fields=("course", "student_profile"), name="uq_enrollment_course_student"
            ),
        ),
    ]
