@startuml
hide circle
skinparam classAttributeIconSize 0

package "courses" {
class Course <<Model>> {
  +id: BigAutoField
  +name: CharField
  +created_at: DateTimeField
  +teacher_profile: TeacherProfile
}
class Enrollment <<Model>> {
  +id: BigAutoField
  +course: Course
  +student_profile: StudentProfile
  +enrolled_at: DateTimeField
  +status: CharField
}
}

Course "0..*" -- "1" TeacherProfile : teacher_profile
Enrollment "0..*" -- "1" Course : course
Enrollment "0..*" -- "1" StudentProfile : student_profile
@enduml
